--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,14 @@ build/CMakeFiles/myProj.dir/main.cpp.obj.d
 build/CMakeFiles/myProj.dir/objects.a
 build/CMakeFiles/myProj.dir/objects1.rsp
 build/CMakeFiles/myProj.dir/progress.make
+build/.cmake/api/v1/reply/index-2021-03-24T16-40-46-0568.json
+build/.cmake/api/v1/reply/cache-v2-4d40553fed2df1bd791c.json
+build/.cmake/api/v1/reply/index-2021-03-24T16-45-59-0533.json
+build/.cmake/api/v1/reply/cache-v2-d6e95c34ff6096fda62e.json
+build/.cmake/api/v1/reply/codemodel-v2-2137e5f8a54ecff4fb2f.json
+build/.cmake/api/v1/reply/index-2021-03-24T19-29-47-0388.json
+build/.cmake/api/v1/reply/target-myProj-Release-cb74b6c66eefd1c58b3e.json
+build/CMakeFiles/myProj.dir/BankAccount/BankAccount.cpp.obj
+build/CMakeFiles/myProj.dir/BankAccount/BankAccount.cpp.obj.d
+.vscode/launch.json
+.vscode/tasks.json
