--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,9 @@ build/CMakeFiles/myProj.dir/BankAccount/BankAccount.cpp.obj
 build/CMakeFiles/myProj.dir/BankAccount/BankAccount.cpp.obj.d
 .vscode/launch.json
 .vscode/tasks.json
+build/.cmake/api/v1/reply/cache-v2-b9f1e06889b4e9c952f5.json
+build/.cmake/api/v1/reply/codemodel-v2-056f19d3710f2902218b.json
+build/.cmake/api/v1/reply/index-2021-03-24T19-46-01-0517.json
+build/.cmake/api/v1/reply/target-myProj-Debug-c0530022d189b8eea3c3.json
+build/.cmake/api/v1/reply/index-2021-03-24T19-49-05-0897.json
+build/.cmake/api/v1/reply/index-2021-03-24T20-59-21-0005.json
