getting on track

--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,1 @@
-build/cmake_install.cmake
-build/CMakeCache.txt
-build/compile_commands.json
-build/Makefile
-build/myProj.exe
-build/.cmake/api/v1/query/client-vscode/query.json
-build/.cmake/api/v1/reply/cache-v2-50a19b56cdcc2fbbf2c4.json
-build/.cmake/api/v1/reply/codemodel-v2-64d5ad1adf07da588300.json
-build/.cmake/api/v1/reply/index-2021-03-24T16-37-56-0992.json
-build/.cmake/api/v1/reply/target-myProj-Debug-d2a73addf3054ce7f13b.json
-build/CMakeFiles/cmake.check_cache
-build/CMakeFiles/CMakeDirectoryInformation.cmake
-build/CMakeFiles/CMakeOutput.log
-build/CMakeFiles/Makefile.cmake
-build/CMakeFiles/Makefile2
-build/CMakeFiles/progress.marks
-build/CMakeFiles/TargetDirectories.txt
-build/CMakeFiles/3.20.0-rc4/CMakeCCompiler.cmake
-build/CMakeFiles/3.20.0-rc4/CMakeCXXCompiler.cmake
-build/CMakeFiles/3.20.0-rc4/CMakeDetermineCompilerABI_C.bin
-build/CMakeFiles/3.20.0-rc4/CMakeDetermineCompilerABI_CXX.bin
-build/CMakeFiles/3.20.0-rc4/CMakeRCCompiler.cmake
-build/CMakeFiles/3.20.0-rc4/CMakeSystem.cmake
-build/CMakeFiles/3.20.0-rc4/CompilerIdC/a.exe
-build/CMakeFiles/3.20.0-rc4/CompilerIdC/CMakeCCompilerId.c
-build/CMakeFiles/3.20.0-rc4/CompilerIdCXX/a.exe
-build/CMakeFiles/3.20.0-rc4/CompilerIdCXX/CMakeCXXCompilerId.cpp
-build/CMakeFiles/myProj.dir/BankAccount.cpp.obj
-build/CMakeFiles/myProj.dir/BankAccount.cpp.obj.d
-build/CMakeFiles/myProj.dir/build.make
-build/CMakeFiles/myProj.dir/cmake_clean.cmake
-build/CMakeFiles/myProj.dir/compiler_depend.internal
-build/CMakeFiles/myProj.dir/compiler_depend.make
-build/CMakeFiles/myProj.dir/compiler_depend.ts
-build/CMakeFiles/myProj.dir/depend.make
-build/CMakeFiles/myProj.dir/DependInfo.cmake
-build/CMakeFiles/myProj.dir/flags.make
-build/CMakeFiles/myProj.dir/link.txt
-build/CMakeFiles/myProj.dir/linklibs.rsp
-build/CMakeFiles/myProj.dir/main.cpp.obj
-build/CMakeFiles/myProj.dir/main.cpp.obj.d
-build/CMakeFiles/myProj.dir/objects.a
-build/CMakeFiles/myProj.dir/objects1.rsp
-build/CMakeFiles/myProj.dir/progress.make
-build/.cmake/api/v1/reply/index-2021-03-24T16-40-46-0568.json
-build/.cmake/api/v1/reply/cache-v2-4d40553fed2df1bd791c.json
-build/.cmake/api/v1/reply/index-2021-03-24T16-45-59-0533.json
-build/.cmake/api/v1/reply/cache-v2-d6e95c34ff6096fda62e.json
-build/.cmake/api/v1/reply/codemodel-v2-2137e5f8a54ecff4fb2f.json
-build/.cmake/api/v1/reply/index-2021-03-24T19-29-47-0388.json
-build/.cmake/api/v1/reply/target-myProj-Release-cb74b6c66eefd1c58b3e.json
-build/CMakeFiles/myProj.dir/BankAccount/BankAccount.cpp.obj
-build/CMakeFiles/myProj.dir/BankAccount/BankAccount.cpp.obj.d
-.vscode/launch.json
-.vscode/tasks.json
-build/.cmake/api/v1/reply/cache-v2-b9f1e06889b4e9c952f5.json
-build/.cmake/api/v1/reply/codemodel-v2-056f19d3710f2902218b.json
-build/.cmake/api/v1/reply/index-2021-03-24T19-46-01-0517.json
-build/.cmake/api/v1/reply/target-myProj-Debug-c0530022d189b8eea3c3.json
-build/.cmake/api/v1/reply/index-2021-03-24T19-49-05-0897.json
-build/.cmake/api/v1/reply/index-2021-03-24T20-59-21-0005.json
+build/
