--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.20.0)
 
 project(myProj)
 
-add_executable(${PROJECT_NAME} main.cpp BankAccount/BankAccount.cpp)
+add_executable(${PROJECT_NAME} main.cpp BankAccount/BankOneAccount/BankOneAccount.cpp BankAccount/BankTwoAccount/BankTwoAccount.cpp)
+
