--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,9 @@ cmake_minimum_required(VERSION 3.20.0)
 
 project(myProj)
 
-add_executable(${PROJECT_NAME} main.cpp BankAccount/BankOneAccount/BankOneAccount.cpp BankAccount/BankTwoAccount/BankTwoAccount.cpp)
+add_executable(${PROJECT_NAME} main.cpp)
+
+add_subdirectory(BankAccount)
+
+target_link_libraries(${PROJECT_NAME} Bank)
 
